--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -299,6 +299,25 @@
                 Stakeholders were excited, but just as we were about to start implementation, priorities shifted and the team moved to a different project. I didn’t save the visuals, but many of the ideas fed into the next iteration.
             </p>
         </div>
+
+        <figure class="--schedule case__container_l">
+            <div class="--schedule__desktop">
+                <img src="/img/cases/funnel/iteration-1-2_desktop.webp" alt="" class="case__pic case__pic_rounded">
+            </div>
+            <div class="--schedule__scroll-wrapper">
+                <div class="--schedule__mobile-container">
+                    <div class="--schedule__mobile">
+                        <img src="/img/cases/funnel/iteration-1-2_mobile_1.webp" alt="" class="case__pic">
+                    </div>
+                    <div class="--schedule__mobile">
+                        <img src="/img/cases/funnel/iteration-1-2_mobile_2.webp" alt="" class="case__pic">
+                    </div>
+                    <div class="--schedule__mobile">
+                        <img src="/img/cases/funnel/iteration-1-2_mobile_3.webp" alt="" class="case__pic">
+                    </div>
+                </div>
+            </div>
+        </figure>
         
         <div class="case__text-box">
             <h2 class="case__h2" id="iteration-2">Iteration 2: <span class="alt-font">Schedule Resceduled</span></h2>
