add date pickers in hands

--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -333,6 +333,12 @@
             </p>
         </div>
 
+        <figure class="--date-picker">
+            <video class="--date-picker__video case__pic" preload="metadata" autoplay muted loop>
+                <source src="/img/cases/funnel/date-picker.mp4" type="video/mp4">
+            </video>
+        </figure>
+
         <div class="case__text-box">
             <p class="case__text">
                 Why it worked better:
@@ -341,6 +347,17 @@
                 <li>We got rid of the intermediate page—users always saw the map first.</li>
                 <li>Date/time selection became much faster and easier, especially on mobile where the interaction was thumb-friendly.</li>
             </ul>
+        </div>
+
+        <div class="--in-hands">
+            <figure class="--in-hands__container case__container_s">
+                <div class="--in-hands__item --in-hands__item_old">
+                    <img src="/img/cases/funnel/date-picker_old.webp" alt="" class="case__pic">
+                </div>
+                <div class="--in-hands__item --in-hands__item_new">
+                    <img src="/img/cases/funnel/date-picker_new.webp" alt="" class="case__pic">
+                </div>
+            </figure>
         </div>
         
         <div class="case__text-box">
