--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -190,7 +190,7 @@
         </div>
 
         <figure class="--counter-anim case__container_s">
-            <video class="--counter-anim__video case__pic" preload="metadata" autoplay muted loop>
+            <video class="--counter-anim__video case__pic" autoplay muted loop>
                 <source src="/img/cases/funnel/counter.mp4" type="video/mp4">
             </video>
         </figure>
@@ -255,7 +255,7 @@
         </div>
 
         <figure class="--cart case__container_m">
-            <video class="--cart__video case__pic" preload="metadata" autoplay muted loop>
+            <video class="--cart__video case__pic" autoplay muted loop>
                 <source src="/img/cases/funnel/cart_comp.mp4" type="video/mp4">
             </video>
         </figure>
@@ -334,7 +334,7 @@
         </div>
 
         <figure class="--date-picker">
-            <video class="--date-picker__video case__pic" preload="metadata" autoplay muted loop>
+            <video class="--date-picker__video case__pic" autoplay muted loop>
                 <source src="/img/cases/funnel/date-picker.mp4" type="video/mp4">
             </video>
         </figure>
@@ -368,6 +368,26 @@
                 To confirm my ideas I built out a few new prototypes with different scenarios which we tested on several rounds for user research. 
             </p>
         </div>
+
+        <figure class="--prototypes case__container_m">
+            <div class="--prototypes__container">
+                <div class="--prototypes__col">
+                    <video class="case__pic" autoplay muted controls loop>
+                        <source src="/img/cases/funnel/date-picker_1.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="--prototypes__col">
+                    <video class="case__pic" autoplay muted controls loop>
+                        <source src="/img/cases/funnel/date-picker_2.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="--prototypes__col">
+                    <video class="case__pic" autoplay muted controls loop>
+                        <source src="/img/cases/funnel/date-picker_3.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
