add new map select

--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -466,6 +466,18 @@
             </p>
         </div>
 
+        <figure class="--new-map case__container_m">
+            <div class="--new-map__desktop">
+                <img src="/img/cases/funnel/new-map.webp" alt="" class="case__pic case__pic_rounded_s">
+            </div>
+            <div class="--new-map__mobile">
+                <div class="--new-map__video">
+                    <video class="case__pic" autoplay muted loop>
+                        <source src="/img/cases/funnel/new-map.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </figure>
         
         <div class="case__text-box">
             <p class="case__text">
