--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -526,8 +526,46 @@
 
     </article>
 
+    <div class="footer footer_case">
+        <h2 class="footer__cta">
+            Wanna more? 
+            <a href="movie-page.html" class="footer__chat">
+                See next.
+                <i class="footer__plane">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 72"><path d="M45 1c.886 15.058 15.416 29.394 31 33.806v2.387C60.416 41.605 45.886 55.942 45 71l-2 1c-7.618-5.078-12.478-16.052-9.036-24 1.97-4.55 9.677-8.107 15.036-9l-.5-1.5C33.964 38 24.503 50 12.565 50 5.074 50 0 43.732 0 36s5.074-14 12.565-14C24.504 22 33.964 34 48.5 34.5L49 33c-5.36-.893-13.066-4.451-15.036-9.001C30.523 16.05 35.383 5.078 43 0l2 1Z"/></svg>
+                </i>
+            </a>
+        </h2>
 
-    <script src="/modernizr-custom.js"></script>
+        <div class="footer__about">
+            <p class="footer__madeby">
+                Designed and developed with vanilla web by Vadik Matveev
+            </p>
+
+            
+            <div class="footer__social">
+                <h4>Elsewhere</h4>
+                <ul class="footer__list">
+                    <li><a href="#" class="footer__link">Linkedin</a></li>
+                    <li><a href="#" class="footer__link">Codepen</a></li>
+                    <li><a href="#" class="footer__link">Dribbble</a></li>
+                </ul>
+            </div>
+            <div class="footer__email">
+                <h4>Contact</h4>
+                <ul class="footer__list">
+                    <li>
+                        <a href="mailto:fooontic@gmail.com" class="footer__link">fooontic@gmail.com</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <p class="footer__copyright">© 2025</p>
+        
+    </div>
+
+
     <script type="module" src="./case.js"></script>
 
 </body>
