--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -161,7 +161,7 @@
         
         <div class="case__text-box">
             <h2 class="case__h2" id="iteration-1">Iteration 1.0: <span class="alt-font">Quick Wins</span></h2>
-            <p class="case__text">/ Sept–Oct 2023</p>
+            <p class="case__subtitle">/ Sept–Oct 2023</p>
             <p class="case__text">
                 The first thing I tackled was the ticket selector for events without a seat map. The original version used a dropdown. I pitched switching to an e-commerce-style counter instead.
             </p>
@@ -293,7 +293,7 @@
 
         <div class="case__text-box">
             <h2 class="case__h2" id="iteration-1_2">Iteration 1.2: <span class="alt-font">Schedule Resceduled</span></h2>
-            <p class="case__text">/ Nov–Dec 2023</p>
+            <p class="case__subtitle">/ Nov–Dec 2023</p>
             <p class="case__text">
                 The date selection still felt bulky — especially on mobile. I designed a cleaner version with responsive date chips that scrolled horizontally when needed, replaced dropdowns with a simple list of time slots, and gave the calendar UI a refresh.
             </p>
@@ -323,7 +323,7 @@
         
         <div class="case__text-box">
             <h2 class="case__h2" id="iteration-2">Iteration 2: <span class="alt-font">Rethinking</span></h2>
-            <p class="case__text">/ Summer 2024</p>
+            <p class="case__subtitle">/ Summer 2024</p>
             <p class="case__text">
                 I was really exited when we finally had time to tackle the map-based flow! The issue was the same: if an event had multiple dates or times, we couldn’t send users straight to the seat map. Instead, they had to go through a confusing list view first, <a href="">which was described before</a>.
             </p>
