add video posters and mobile autoplay

--- a/cases/ticket-flow.html
+++ b/cases/ticket-flow.html
@@ -51,7 +51,7 @@
             </div>
             <div class="intro__hero --intro">
                 <div class="--intro__video">
-                    <video class="" autoplay muted loop>
+                    <video class="" autoplay playsinline playsinline muted loop poster="/img/ticket-select_poster.webp">
                         <source src="/img/ticket-select.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -192,7 +192,7 @@
         </div>
 
         <figure class="--counter-anim case__container_s">
-            <video class="--counter-anim__video case__pic" autoplay muted loop>
+            <video class="--counter-anim__video case__pic" autoplay playsinline muted loop poster="/img/cases/funnel/counter_poster.webp">
                 <source src="/img/cases/funnel/counter.mp4" type="video/mp4">
             </video>
         </figure>
@@ -257,8 +257,8 @@
         </div>
 
         <figure class="--cart case__container_m">
-            <video class="--cart__video case__pic" autoplay muted loop>
-                <source src="/img/cases/funnel/cart_comp.mp4" type="video/mp4">
+            <video class="--cart__video case__pic" autoplay playsinline muted loop poster="/img/cases/funnel/cart_poster.webp">
+                <source src="/img/cases/funnel/cart.mp4" type="video/mp4">
             </video>
         </figure>
         
@@ -336,7 +336,7 @@
         </div>
 
         <figure class="--date-picker">
-            <video class="--date-picker__video case__pic" autoplay muted loop>
+            <video class="--date-picker__video case__pic" autoplay playsinline muted loop poster="/img/cases/funnel/date-picker_poster.webp">
                 <source src="/img/cases/funnel/date-picker.mp4" type="video/mp4">
             </video>
         </figure>
@@ -374,17 +374,17 @@
         <figure class="--prototypes case__container_m">
             <div class="--prototypes__container">
                 <div class="--prototypes__col">
-                    <video class="case__pic" autoplay muted controls loop>
+                    <video class="case__pic" autoplay playsinline muted controls loop poster="/img/cases/funnel/date-picker_1_poster.webp">
                         <source src="/img/cases/funnel/date-picker_1.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="--prototypes__col">
-                    <video class="case__pic" autoplay muted controls loop>
+                    <video class="case__pic" autoplay playsinline muted controls loop poster="/img/cases/funnel/date-picker_2_poster.webp">
                         <source src="/img/cases/funnel/date-picker_2.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="--prototypes__col">
-                    <video class="case__pic" autoplay muted controls loop>
+                    <video class="case__pic" autoplay playsinline muted controls loop poster="/img/cases/funnel/date-picker_3_poster.webp">
                         <source src="/img/cases/funnel/date-picker_3.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -411,7 +411,7 @@
         </div>
 
         <figure class="--promocode case__container_s">
-            <video class="case__pic" autoplay muted controls loop>
+            <video class="case__pic" autoplay playsinline muted controls loop poster="/img/cases/funnel/promocode_poster.webp">
                 <source src="/img/cases/funnel/promocode.mp4" type="video/mp4">
             </video>
         </figure>
@@ -486,7 +486,7 @@
             </div>
             <div class="--new-map__mobile">
                 <div class="--new-map__video">
-                    <video class="case__pic" autoplay muted loop>
+                    <video class="case__pic" autoplay playsinline muted loop poster="/img/cases/funnel/new-map_poster.webp">
                         <source src="/img/cases/funnel/new-map.mp4" type="video/mp4">
                     </video>
                 </div>
