--- a/cases/resale.html
+++ b/cases/resale.html
@@ -56,7 +56,7 @@
                     <img src="/img/cases/resale/intro_2.jpg" alt="">
                 </div>
                 <div class="intro__pic --intro__pic">
-                    <video class="--intro__video" autoplay muted loop>
+                    <video class="--intro__video" autoplay muted playsinline loop poster="/img/resale_poster.webp">
                         <source src="/img/resale.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -258,7 +258,7 @@
         <div class="case__container_m --rs-tickets">
             <figure class="--rs-tickets__container">
                 <div class="--rs-tickets__video">
-                    <video class="case__pic" autoplay muted controls loop>
+                    <video class="case__pic" autoplay playsinline muted loop poster="/img/cases/resale/resale_tickets_poster.webp">
                         <source src="/img/cases/resale/resale_tickets.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -278,7 +278,7 @@
         </div>
 
         <div class="--onboarding case__container_s">
-            <video class="case__pic" autoplay muted controls loop>
+            <video class="case__pic" autoplay muted playsinline loop poster="/img/cases/resale/resale_onboarding_poster.webp">
                 <source src="/img/cases/resale/resale_onboarding.mp4" type="video/mp4">
             </video>
         </div>
